// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The ImageFile component should render 1`] = `
<Component
  accept="image/jpeg, image/png"
  className="image-upload"
  multiple={false}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "18rem",
      "width": "18rem",
    }
  }
>
  <div
    className="hover-area"
  >
    <div
      className="hide"
    >
      <UploadIcon />
    </div>
  </div>
  <div
    className="placeholder placeholder--round"
  />
</Component>
`;

exports[`The ImageFile component should render with image 1`] = `
<Component
  accept="image/jpeg, image/png"
  className="image-upload"
  multiple={false}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "18rem",
      "width": "18rem",
    }
  }
>
  <div
    className="hover-area"
  >
    <div
      className="hide"
    >
      <UploadIcon />
    </div>
    <div
      className="cover cover--round"
    />
  </div>
  <Image
    shape="round"
    size="18rem"
    src="test"
  />
</Component>
`;

exports[`The ImageFile component should render with placeholderLabel 1`] = `
<Component
  accept="image/jpeg, image/png"
  className="image-upload"
  multiple={false}
  onDragEnter={[Function]}
  onDragLeave={[Function]}
  onDrop={[Function]}
  style={
    Object {
      "height": "18rem",
      "width": "18rem",
    }
  }
>
  <div
    className="hover-area"
  >
    <div
      className="hide icon-with-label"
    >
      <UploadIcon />
      <div
        className="placeholder-label"
      >
        test
      </div>
    </div>
  </div>
  <div
    className="placeholder placeholder--round"
  />
</Component>
`;
